# rust-kata

./: README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
alternating-chars/: Cargo.toml  README.md
alternating-chars/src/: main.rs  strtool.rs
append-to-file/src/: lib.rs  main.rs
azure-storage/: Cargo.toml  first-build.sh
azure-storage/src/: main.rs
beeramid/src/: lib.rs
consecutive-strings/src/: lib.rs
insertion-sort/src/: main.rs  sort.rs
merge-sort/src/: lib.rs
string-search/src/: main.rs  search.rs
timetrack/: Cargo.toml  Dockerfile
timetrack/src/: enums.rs  lib.rs
timetrack/src/types/: mod.rs  timetrackerstores.rs
