[package]
name = "azure-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.17.0"
azure_storage = "0.17.0"
azure_storage_blobs = "0.17.0"
dotenv = "0.15.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
